js/src/tests/test262/built-ins/Error/prototype/stack/getter-error-as-prototype.js




















var get = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;

for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];
  var protoErr = new Ctor('outer');
  var o = { __proto__: protoErr };

  assert.sameValue(get.call(o), undefined, Ctor.name + ': get.call on object with instance as proto');

  
  
  
  assert.sameValue(o.stack, undefined, Ctor.name + ': property access on object with instance as proto');

  
  
  assert.sameValue(typeof get.call(protoErr), 'string', Ctor.name + ': get.call on the underlying instance');
}

reportCompare(0, 0);
